--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
     "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vuejs-paginate": "^2.1.0"
+  },
   "devDependencies": {
     "bootstrap": "^4.3.1",
     "cross-env": "^5.2.0",
@@ -34,7 +36,6 @@
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-vue": "^5.0.0",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10",
-    "vuejs-paginate": "^2.1.0"
+    "vue-template-compiler": "^2.6.10"
   }
 }
